--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -155,6 +155,11 @@ h2{
     padding-bottom: .25em;
 }
 
+h3.job-title {
+    display: inline-block;
+    color: #444;
+}
+
 dt{
     font-size: 1.1rem;
     line-height: 1.3;
@@ -163,7 +168,7 @@ dt{
 
 dd{
     /* border: solid 1px #f0f; */
-    padding-left: 12px;
+    /* padding-left: 12px; */
     /* margin-left: 220px; */
 }
 
@@ -185,7 +190,7 @@ dd{
 #experience dd ul li {
     line-height: 1.75;
     list-style-type: disc;
-    /* margin-left: 1.5rem; */
+    margin-left: .75rem;
     /* background: transparent url(../images/bullet.png) 0 1px no-repeat; */
 }
 
